--- a/proportal/views/inc/generic/list_results.tt
+++ b/proportal/views/inc/generic/list_results.tt
@@ -1,21 +1,9 @@
 [%	WRAPPER 'inc/page_wrapper.tt';
 	title = results.domain _ ' List' | ucfirst;
-%]
-<h2>[% results.domain | ucfirst %] List</h2>
-[%	IF results.params;
-		IF 'gene' == results.domain; %]
-		<h4>
-			<!--  this section needs to be expanded as more links come online -->
-			[%	IF results.params.category;
-					data_filters.schema.category.enum_map.${ results.params.category } || results.params.category;
-				END;
 
-				IF results.params.taxon_oid; %]
-				for taxon <a href="[% link( 'details', { domain => 'taxon', taxon_oid => results.params.taxon_oid } ) %]">[% results.params.taxon_oid %]</a>
-[%				END %]
-		</h4>
-[%		END; # end IF 'gene'
-	END; # end IF results.params
+	result_list_id = results.domain _ "-list";
+
+	BLOCK result_list;
 
 	IF results.n_results; %]
 <p class="[% results.table.class %]__count">[% results.n_results %] results</p>
@@ -23,24 +11,29 @@
 
 	IF results.defined('n_pages') && results.n_pages > 1; %]
 <p>PAGING REQUIRED!</p>
-[%	END; %]
-<div class="[% results.table.class %]__container" id="main">
-[%	IF results.arr.size > 0;
+[%	END;
 
-		form_wrapper = 'inc/cart/' _ results.domain _ '_add.tt';
-#		WRAPPER $form_wrapper;
+		data_table = results.table;
+		data_table.class = result_list_id;
+		data_table.id = result_list_id;
+		data_table.tbody = results.arr;
+#		data_table.caption = results.domain _ " List" | ucfirst;
+		PROCESS 'inc/generic/table.tt';
 
-			data_table = results.table;
-			data_table.class = results.domain _ "-list";
-#			data_table.caption = results.domain _ " List" | ucfirst;
-			data_table.tbody = results.arr;
-			PROCESS 'inc/generic/table.tt' WRAPPER $form_wrapper;
+	END; # end block
 
-#		END; # end wrapper
+	article_title = title;
+	PROCESS 'inc/generic/title.tt';
+	PROCESS 'inc/generic/container_macros.tt';
 
-	ELSE %]
-<p>No [% results.domain %]s found</p>
-[%	END;  # END if results.arr.size %]
-</div>
-[% END %]
+	sections = [ { id => 'result_list' } ];
+
+	layout_page( sections );
+
+	IF results.arr.size > 0;
+		table_arr = [ result_list_id ];
+		PROCESS 'scripts/datatables.tt';
+	END;
+
+END; %]
 
